Exercise Solution - Intro to forms

--- a/index.html
+++ b/index.html
@@ -15,30 +15,110 @@
           Fill out the form below to place an order for an alien abduction by
           one of our fine UFOs.
         </p>
-        <h2>Your contact information</h2>
-        <p>Your name</p>
-        <p>Phone number</p>
-        <p>Email</p>
+        <br />
 
-        <h2>About your abduction</h2>
-        <p>Requested date</p>
-        <p>How many people would you like abducted?</p>
-        <p>What type of UFO do you prefer?</p>
-        <ul>
-          <li>Classic oval UFO</li>
-          <li>Star Wars-style Imperial cruiser</li>
-          <li>Battlestar Galactica-style Viper</li>
-          <li>Borg-style cube</li>
-        </ul>
-        <p>What type of abduction experience do you want?</p>
-        <ul>
-          <li>Tour of the solar system</li>
-          <li>Alien dinner and discussion</li>
-          <li>Alien dance lessons</li>
-          <li>Whale watching</li>
-        </ul>
-        <p>Special requests:</p>
-        <p>Add me to your email list</p>
+        <form>
+          <fieldset>
+            <legend>Your contact information</legend>
+            <label for="name">Your name</label><br />
+            <input type="text" id="name" name="name" required /><br /><br />
+
+            <label for="phone_number">Phone number:</label><br />
+            <input
+              type="tel"
+              id="phone_number"
+              name="phone_number"
+              pattern="[A-Za-z]{3}"
+            /><br /><br />
+            <label for="email">email:</label><br />
+            <input type="email" id="email" name="email" required />
+          </fieldset>
+          <h2>About your abduction</h2>
+
+          <label for="datemax">Requested date</label>
+          <input type="date" id="date" name="date" /><br /><br />
+
+          <label for="vol">How many people would you like abducted?</label>
+          <input type="number" id="npeople" name="npeople" min="1" max="99" />
+
+          <br />
+
+          What type of UFO do you prefer?
+
+          <input type="radio" id="classic_ufo" name="ufo" value="classic_ufo" />
+          <label for="classic_ufo">Classic oval UFO<br /></label>
+          <input
+            type="radio"
+            id="star_wars_ufo"
+            name="ufo"
+            value="star_wars_ufo"
+          />
+          <label for="star_wars_ufo"
+            >Star Wars-style Imperial cruiser<br
+          /></label>
+          <input
+            type="radio"
+            id="galactica_ufo"
+            name="ufo"
+            value="galactica_ufo"
+          />
+          <label for="galactica_ufo"
+            >Battlestar Galactica-style Viper<br
+          /></label>
+          <input type="radio" id="borg_ufo" name="ufo" value="borg_ufo" />
+          <label for="borg_ufo">Borg-style cube<br /></label>
+
+          <p>What type of abduction experience do you want?</p>
+
+          <input
+            type="radio"
+            id="space_experience"
+            name="abduction_experience"
+            value="space_experience"
+          />
+          <label for="space_experience">Tour of the solar system<br /></label>
+          <input
+            type="radio"
+            id="dinner_experience"
+            name="abduction_experience"
+            value="dinner_experience"
+          />
+          <label for="dinner_experience"
+            >Alien dinner and discussion<br
+          /></label>
+          <input
+            type="radio"
+            id="dance_experience"
+            name="abduction_experience"
+            value="dance_experience"
+          />
+          <label for="dance_experience">Alien dance lessons<br /></label>
+          <input
+            type="radio"
+            id="whale_experience"
+            name="abduction_experience"
+            value="whale_experience"
+          />
+          <label for="whale_experience">Whale watching<br /></label><br />
+
+          <label for="requests">Special requests:</label><br />
+          <input
+            type="text"
+            id="requests"
+            name="requests"
+            size="50"
+          /><br /><br />
+
+          <input
+            type="checkbox"
+            id="email_list"
+            name="email_list"
+            value="email_list"
+          />
+          <label for="vehicle1">Add me to your email list</label><br />
+
+          <input type="submit" value="submit" />
+        </form>
       </section>
       <aside>
         <h3>Our Location</h3>
