Updated visual wrapper of forms

--- a/index.html
+++ b/index.html
@@ -33,95 +33,112 @@
             <label for="email">email:</label><br />
             <input type="email" id="email" name="email" required />
           </fieldset>
-          <h2>About your abduction</h2>
 
-          <label for="datemax">Requested date</label>
-          <input type="date" id="date" name="date" /><br /><br />
+          <fieldset>
+            <legend>About your abduction</legend>
+            <label for="datemax">Requested date</label>
+            <input type="date" id="date" name="date" /><br /><br />
 
-          <label for="vol">How many people would you like abducted?</label>
-          <input type="number" id="npeople" name="npeople" min="1" max="99" />
+            <label for="vol">How many people would you like abducted?</label>
+            <input type="number" id="npeople" name="npeople" min="1" max="99" />
 
-          <br />
+            <br />
 
-          What type of UFO do you prefer?
+            What type of UFO do you prefer?
 
-          <input type="radio" id="classic_ufo" name="ufo" value="classic_ufo" />
-          <label for="classic_ufo">Classic oval UFO<br /></label>
-          <input
-            type="radio"
-            id="star_wars_ufo"
-            name="ufo"
-            value="star_wars_ufo"
-          />
-          <label for="star_wars_ufo"
-            >Star Wars-style Imperial cruiser<br
-          /></label>
-          <input
-            type="radio"
-            id="galactica_ufo"
-            name="ufo"
-            value="galactica_ufo"
-          />
-          <label for="galactica_ufo"
-            >Battlestar Galactica-style Viper<br
-          /></label>
-          <input type="radio" id="borg_ufo" name="ufo" value="borg_ufo" />
-          <label for="borg_ufo">Borg-style cube<br /></label>
+            <input
+              type="radio"
+              id="classic_ufo"
+              name="ufo"
+              value="classic_ufo"
+            />
+            <label for="classic_ufo">Classic oval UFO<br /></label>
+            <input
+              type="radio"
+              id="star_wars_ufo"
+              name="ufo"
+              value="star_wars_ufo"
+            />
+            <label for="star_wars_ufo"
+              >Star Wars-style Imperial cruiser<br
+            /></label>
+            <input
+              type="radio"
+              id="galactica_ufo"
+              name="ufo"
+              value="galactica_ufo"
+            />
+            <label for="galactica_ufo"
+              >Battlestar Galactica-style Viper<br
+            /></label>
+            <input type="radio" id="borg_ufo" name="ufo" value="borg_ufo" />
+            <label for="borg_ufo">Borg-style cube<br /></label>
 
-          <p>What type of abduction experience do you want?</p>
+            <p>What type of abduction experience do you want?</p>
 
-          <input
-            type="radio"
-            id="space_experience"
-            name="abduction_experience"
-            value="space_experience"
-          />
-          <label for="space_experience">Tour of the solar system<br /></label>
-          <input
-            type="radio"
-            id="dinner_experience"
-            name="abduction_experience"
-            value="dinner_experience"
-          />
-          <label for="dinner_experience"
-            >Alien dinner and discussion<br
-          /></label>
-          <input
-            type="radio"
-            id="dance_experience"
-            name="abduction_experience"
-            value="dance_experience"
-          />
-          <label for="dance_experience">Alien dance lessons<br /></label>
-          <input
-            type="radio"
-            id="whale_experience"
-            name="abduction_experience"
-            value="whale_experience"
-          />
-          <label for="whale_experience">Whale watching<br /></label><br />
+            <input
+              type="radio"
+              id="space_experience"
+              name="abduction_experience"
+              value="space_experience"
+            />
+            <label for="space_experience">Tour of the solar system<br /></label>
+            <input
+              type="radio"
+              id="dinner_experience"
+              name="abduction_experience"
+              value="dinner_experience"
+            />
+            <label for="dinner_experience"
+              >Alien dinner and discussion<br
+            /></label>
+            <input
+              type="radio"
+              id="dance_experience"
+              name="abduction_experience"
+              value="dance_experience"
+            />
+            <label for="dance_experience">Alien dance lessons<br /></label>
+            <input
+              type="radio"
+              id="whale_experience"
+              name="abduction_experience"
+              value="whale_experience"
+            />
+            <label for="whale_experience">Whale watching<br /></label><br />
 
-          <label for="requests">Special requests:</label><br />
-          <input
-            type="text"
-            id="requests"
-            name="requests"
-            size="50"
-          /><br /><br />
+            <label for="requests">Special requests:</label><br />
+            <input
+              type="text"
+              id="requests"
+              name="requests"
+              size="50"
+            /><br /><br />
 
-          <input
-            type="checkbox"
-            id="email_list"
-            name="email_list"
-            value="email_list"
-          />
-          <label for="vehicle1">Add me to your email list</label><br />
+            <input
+              type="checkbox"
+              id="email_list"
+              name="email_list"
+              value="email_list"
+            />
+            <label for="vehicle1">Add me to your email list</label><br />
 
-          <input type="submit" value="submit" />
+            <input type="submit" value="submit" />
+          </fieldset>
         </form>
       </section>
       <aside>
         <h3>Our Location</h3>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d217315.37667902937!2d-9.134568743862339!3d38.94767122218098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd193479d0af097d%3A0xac0c1f4d67894d63!2sEDIT.%20-%20Disruptive%20Digital%20Education!5e0!3m2!1spt-PT!2spt!4v1679227457699!5m2!1spt-PT!2spt"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+          title="Edit location"
+        ></iframe>
         <address>
           EDIT. - Disruptive Digital Education &middot; Alameda D.Afonso
           Henriques, 7A &middot; 1900-178, Lisboa
