Finished header formatting. Added new styles. Started to format margins for main and footer

--- a/tables-exercise/Exercise-2/index.html
+++ b/tables-exercise/Exercise-2/index.html
@@ -13,7 +13,7 @@
       <caption>
         This is a creative capture for my table!
       </caption>
-      <thead class="table-cell">
+      <thead>
         <tr>
           <th>Company</th>
           <th>Contact</th>
