--- a/portfolio/starter-code/index.html
+++ b/portfolio/starter-code/index.html
@@ -20,55 +20,82 @@
   </head>
   <body>
     <header>
-      <span class="name">adamkeyes</span>
-      <div class="social">
-        <img
-          class="social-icon"
-          src="assets/images/icon-github.svg"
-          alt="git-icon"
-        />
+      <div class="head-top">
+        <span class="name">adamkeyes</span>
+        <div class="social">
+          <img
+            class="social-icon"
+            src="assets/images/icon-github.svg"
+            alt="git-icon"
+          />
 
-        <img
-          class="social-icon"
-          src="assets/images/icon-frontend-mentor.svg"
-          alt="social-icon"
-        />
+          <img
+            class="social-icon"
+            src="assets/images/icon-frontend-mentor.svg"
+            alt="social-icon"
+          />
 
-        <img
-          class="social-icon"
-          src="assets/images/icon-linkedin.svg"
-          alt="linkedin-icon"
-        />
+          <img
+            class="social-icon"
+            src="assets/images/icon-linkedin.svg"
+            alt="linkedin-icon"
+          />
 
-        <img
-          class="social-icon"
-          src="assets/images/icon-twitter.svg"
-          alt="twitter-icon"
-        />
+          <img
+            class="social-icon"
+            src="assets/images/icon-twitter.svg"
+            alt="twitter-icon"
+          />
+        </div>
       </div>
+
       <section class="intro">
-        <h1>Nice to meet you! I'm Adam Keyes.</h1>
-        <p>
+        <h1>
+          Nice to meet you!<br />
+          I'm <span class="under-88">Adam Keyes</span>.
+        </h1>
+        <p class="text-18-500" style="max-width: 445px; margin-top: 43px">
           Based in the UK, I'm a front-end developer passionate about building
           accessible web apps that users love.
         </p>
       </section>
 
-      <p>Contact me!</p>
+      <p class="text-18-500 under-18" style="margin-bottom: 219px">
+        Contact me!
+      </p>
     </header>
     <main>
       <section class="techStack-section" id="TechStack">
-        <span class="techStack-item">HTML 4 Years Experience</span>
-        <span class="techStack-item">CSS 4 Years Experience JavaScript</span>
-        <span class="techStack-item">4 Years Experience Accessibility</span>
+        <div class="techStack-item">
+          <span class="text-48-700">HTML</span
+          ><span class="text-18-500">4 Years Experience</span>
+        </div>
+        <div class="techStack-item">
+          <span class="text-48-700">CSS</span
+          ><span class="text-18-500">4 Years Experience</span>
+        </div>
+        <div class="techStack-item">
+          <span class="text-48-700">JavaScript</span
+          ><span class="text-18-500">4 Years Experience</span>
+        </div>
         <br />
-        <span class="techStack-item">4 Years Experience React</span>
-        <span class="techStack-item">3 Years Experience Sass</span>
-        <span class="techStack-item">3 Years Experience Projects</span>
+        <div class="techStack-item">
+          <span class="text-48-700">Accessibility</span
+          ><span class="text-18-500">4 Years Experience</span>
+        </div>
+        <div class="techStack-item">
+          <span class="text-48-700">React</span
+          ><span class="text-18-500">3 Years Experience</span>
+        </div>
+        <div class="techStack-item">
+          <span class="text-48-700">Sass</span
+          ><span class="text-18-500">3 Years Experience</span>
+        </div>
       </section>
       <section class="project-section" id="Projects">
-        <h2>Projects</h2>
-        Contact me
+        <h2 class="text-88-700">Projects</h2>
+        <span class="text-18-500 under-18">Contact me</span>
+
         <div class="project-item" id="project-1">
           <img
             src="assets/images/thumbnail-project-1-large.webp"
@@ -132,7 +159,7 @@
 
       <section class="contact">
         <div class="contact-text">
-          <h2>Contact</h2>
+          <h2 class="text-88-700">Contact</h2>
           <span
             >I would love to hear about your project and how I could help.
             Please fill in the form, and I’ll get back to you as soon as
@@ -149,6 +176,7 @@
           <label for="message">Message</label><br />
           <textarea name="message" id="message" cols="30" rows="10"></textarea>
         </form>
+        <span class="text-18-500 under-18">Send message</span>
       </section>
     </main>
     <footer>
