Finished tech-stack section. Project section almost done. Redefined general purpose classes

--- a/portfolio/starter-code/index.html
+++ b/portfolio/starter-code/index.html
@@ -54,112 +54,111 @@
           Nice to meet you!<br />
           I'm <span class="under-88">Adam Keyes</span>.
         </h1>
-        <p class="text-18-500" style="max-width: 445px; margin-top: 43px">
+        <p class="body-l" style="max-width: 445px; margin-top: 43px">
           Based in the UK, I'm a front-end developer passionate about building
           accessible web apps that users love.
         </p>
       </section>
 
-      <p class="text-18-500 under-18" style="margin-bottom: 219px">
-        Contact me!
-      </p>
+      <p class="body-l under-18" style="margin-bottom: 219px">Contact me!</p>
     </header>
     <main>
       <section class="techStack-section" id="TechStack">
         <div class="techStack-item">
-          <span class="text-48-700">HTML</span
-          ><span class="text-18-500">4 Years Experience</span>
+          <span class="heading-l">HTML</span
+          ><span class="body-l">4 Years Experience</span>
         </div>
         <div class="techStack-item">
-          <span class="text-48-700">CSS</span
-          ><span class="text-18-500">4 Years Experience</span>
+          <span class="heading-l">CSS</span
+          ><span class="body-l">4 Years Experience</span>
         </div>
         <div class="techStack-item">
-          <span class="text-48-700">JavaScript</span
-          ><span class="text-18-500">4 Years Experience</span>
+          <span class="heading-l">JavaScript</span
+          ><span class="body-l">4 Years Experience</span>
         </div>
-        <br />
+
         <div class="techStack-item">
-          <span class="text-48-700">Accessibility</span
-          ><span class="text-18-500">4 Years Experience</span>
-        </div>
-        <div class="techStack-item">
-          <span class="text-48-700">React</span
-          ><span class="text-18-500">3 Years Experience</span>
+          <span class="heading-l">Accessibility</span
+          ><span class="body-l">4 Years Experience</span>
         </div>
         <div class="techStack-item">
-          <span class="text-48-700">Sass</span
-          ><span class="text-18-500">3 Years Experience</span>
+          <span class="heading-l">React</span
+          ><span class="body-l">3 Years Experience</span>
+        </div>
+        <div class="techStack-item">
+          <span class="heading-l">Sass</span
+          ><span class="body-l">3 Years Experience</span>
         </div>
       </section>
-      <section class="project-section" id="Projects">
-        <h2 class="text-88-700">Projects</h2>
-        <span class="text-18-500 under-18">Contact me</span>
+      <section class="project-section" id="project-session">
+        <div class="project-header" id="project-header">
+          <h2 class="heading-xl">Projects</h2>
+          <span class="body-l under-18">Contact me</span>
+        </div>
 
         <div class="project-item" id="project-1">
           <img
+            class="project-img"
             src="assets/images/thumbnail-project-1-large.webp"
             alt="project-1"
-            style="width: 30%"
           />
-          <br />
-          Design portfolio <br />
-          HTML CSS View project View code
+          <span class="heading-m">Design portfolio</span>
+          <span class="body-l">HTML CSS</span>
         </div>
         <div class="project-item" id="project-2">
           <img
+            class="project-img"
             src="assets/images/thumbnail-project-2-large.webp"
             alt="project-2"
-            style="width: 30%"
           />
-          <p>E-learning landing page</p>
-          HTML CSS View project View code
+          <span class="heading-m"> E-learning landing page </span>
+          <span class="body-l">HTML CSS</span>
         </div>
 
         <div class="project-item" id="project-3">
           <img
+            class="project-img"
             src="assets/images/thumbnail-project-3-large.webp"
             alt="project-3"
-            style="width: 30%"
           />
-          <p>Todo web app</p>
-          HTML CSS JavaScript View project View code
+          <span class="heading-m">Todo web app</span>
+          <span class="body-l">HTML CSS JavaScript </span>
         </div>
 
         <div class="project-item" id="project-4">
           <img
+            class="project-img"
             src="assets/images/thumbnail-project-4-large.webp"
             alt="project-4"
-            style="width: 30%"
           />
-          <p>Entertainment web app</p>
-          HTML CSS JavaScript View project View code
-        </div>
-
-        <div class="project-item" id="project-4">
-          <img
-            src="assets/images/thumbnail-project-4-large.webp"
-            alt="project-4"
-            style="width: 30%"
-          />
-          <p>Memory Game</p>
-          HTML CSS JavaScript View project View code
+          <span class="heading-m">Entertainment web app</span>
+          <span class="body-l">HTML CSS JavaScript</span>
         </div>
 
         <div class="project-item" id="project-5">
           <img
+            class="project-img"
             src="assets/images/thumbnail-project-5-large.webp"
             alt="project-5"
-            style="width: 30%"
           />
-          <p>Art gallery showcase</p>
-          HTML CSS JavaScript View project View code
+          <span class="heading-m">Memory Game</span>
+          <span class="body-l">HTML CSS JavaScript</span>
+        </div>
+
+        <div class="project-item" id="project-6">
+          <img
+            class="project-img"
+            src="assets/images/thumbnail-project-6-large.webp"
+            alt="project-6"
+          />
+          <span class="heading-m">Art gallery showcase</span>
+          <span class="body-l">HTML CSS JavaScript</span>
         </div>
       </section>
 
       <section class="contact">
         <div class="contact-text">
-          <h2 class="text-88-700">Contact</h2>
+          <h2 class="heading-xl">Contact</h2>
           <span
             >I would love to hear about your project and how I could help.
             Please fill in the form, and I’ll get back to you as soon as
@@ -176,7 +175,7 @@
           <label for="message">Message</label><br />
           <textarea name="message" id="message" cols="30" rows="10"></textarea>
         </form>
-        <span class="text-18-500 under-18">Send message</span>
+        <span class="body-l under-18">Send message</span>
       </section>
     </main>
     <footer>
